landing page content updated

--- a/index.html
+++ b/index.html
@@ -58,29 +58,28 @@
         <section class="habits">
             <div class="habits-content">
                 <h2 class="title">Change Your Habits</h2>
-                <p class="description">We believe fitness should be accessible to everyone, everywhere, regardless of
-                    income or access to a gym.</p>
+                <p class="description">Transform your fitness journey by making small, consistent changes. Start with simple habits that fit into your daily life</p>
             </div>
             <div class="habits-card-container">
                 <div class="habit-card">
                     <img src="assets/images/habits-1.png" alt="training">
                     <h3 class="habit-card-title">Movement</h3>
-                    <p class="description">We believe fitness should be accessible to everyone</p>
+                    <p class="description">Incorporate more movement into your day to boost your fitness</p>
                 </div>
                 <div class="habit-card">
                     <img src="assets/images/habits-2.png" alt="training">
                     <h3 class="habit-card-title">Time</h3>
-                    <p class="description">We believe fitness should be accessible to everyone</p>
+                    <p class="description">Make the most of your time with efficient workouts that fit your schedule</p>
                 </div>
                 <div class="habit-card">
                     <img src="assets/images/habits-3.png" alt="training">
                     <h3 class="habit-card-title">Practice</h3>
-                    <p class="description">We believe fitness should be accessible to everyone</p>
+                    <p class="description">Consistency is key practice daily to build lasting healthy habits</p>
                 </div>
                 <div class="habit-card">
                     <img src="assets/images/habits-4.png" alt="training">
                     <h3 class="habit-card-title">Weight Loss</h3>
-                    <p class="description">We believe fitness should be accessible to everyone</p>
+                    <p class="description">Lose weight gradually and sustainably with our balanced approach</p>
                 </div>
             </div>
         </section>
@@ -90,8 +89,7 @@
             <div class="join-now-banner-parent">
                 <div class="join-now-banner-content">
                     <h2 class="title">Run an Extra <br> Mile Easily</h2>
-                    <p class="description">We believe fitness should be accessible to everyone, everywhere, regardless
-                        of income or access to a gym. With hundreds of professional workouts.</p>
+                    <p class="description">Push your limits, go the extra distance, and unlock new levels of endurance and strength on your fitness journey. Embrace the challenge and feel empowered as you surpass your own expectations</p>
                     <button class="primary-btn">Join Now</button>
                 </div>
                 <div class="join-now-img">
@@ -103,8 +101,7 @@
         <section class="training-and-exercise">
             <div class="training-and-exercise-content">
                 <h2 class="title">Training and Exercise</h2>
-                <p class="description">We believe fitness should be accessible to everyone, everywhere, regardless of
-                    income or access to a gym.</p>
+                <p class="description">Enhance your fitness with targeted training routines and exercises that build strength, improve endurance, and keep you active</p>
             </div>
             <div class="exercise-container">
                 <div class="first-column">
@@ -136,8 +133,7 @@
         <section class="bmi-calculator-container">
             <div class="bmi-content">
                 <h2 class="title">BMI Calculator</h2>
-                <p class="description">We believe fitness should be accessible to everyone, everywhere, regardless of
-                    income or access to a gym.</p>
+                <p class="description">Easily determine your Body Mass Index to understand your health status and set realistic fitness goals</p>
             </div>
             <div class="bmi-calculator-background">
                 <div class="bmi-calculator-parent">
@@ -172,8 +168,7 @@
                     </div>
                     <div class="bmi-calculator">
                         <h3 class="bmi-cal-title">Calculate Your BMI</h3>
-                        <p class="description">We believe fitness should be accessible to everyone, everywhere,
-                            regardless of income or access to a gym.</p>
+                        <p class="description">Quickly find out your Body Mass Index to assess your health and set personalized fitness goals</p>
                         <form action="">
                             <input type="text" name="bmi" id="" placeholder="Height/cm">
                             <input type="text" name="bmi" id="" PlaceHOlder="Weight/Kg">
@@ -197,8 +192,7 @@
         <section class="meet-our-team">
             <div class="meet-our-team-content">
                 <h2 class="title">Meet our Team</h2>]
-                <p class="description">We believe fitness should be accessible to everyone, everywhere, regardless of
-                    income or access to a gym.</p>
+                <p class="description">Get to know the experts dedicated to guiding your fitness journey and helping you achieve your goals</p>
             </div>
             <div class="team-members">
                 <div class="team-col-1">
@@ -265,7 +259,7 @@
                         <div class="name-handle-container">
                             <a href="http://" target="_blank" rel="noopener noreferrer" class="profile-name">Emily
                                 Carter</a>
-                            <span class="profile-handle">@johan_drick</span>
+                            <span class="profile-handle">@emily_carter</span>
                         </div>
                     </div>
                 </div>
@@ -278,7 +272,7 @@
                         <div class="name-handle-container">
                             <a href="http://" target="_blank" rel="noopener noreferrer" class="profile-name">Michael
                                 Davis</a>
-                            <span class="profile-handle">@johan_drick</span>
+                            <span class="profile-handle">@michael_davis</span>
                         </div>
                     </div>
                 </div>
@@ -292,7 +286,7 @@
                         <div class="name-handle-container">
                             <a href="http://" target="_blank" rel="noopener noreferrer" class="profile-name">Olivia
                                 Johnson</a>
-                            <span class="profile-handle">@johan_drick</span>
+                            <span class="profile-handle">@olivia_johnson</span>
                         </div>
                     </div>
                 </div>
@@ -305,7 +299,7 @@
                         <div class="name-handle-container">
                             <a href="http://" target="_blank" rel="noopener noreferrer" class="profile-name">William
                                 Brown</a>
-                            <span class="profile-handle">@johan_drick</span>
+                            <span class="profile-handle">@william_brown</span>
                         </div>
                     </div>
                 </div>
@@ -319,7 +313,7 @@
                         <div class="name-handle-container">
                             <a href="http://" target="_blank" rel="noopener noreferrer" class="profile-name">Sophia
                                 Miller</a>
-                            <span class="profile-handle">@johan_drick</span>
+                            <span class="profile-handle">@sophia</span>
                         </div>
                     </div>
                 </div>
@@ -332,7 +326,7 @@
                         <div class="name-handle-container">
                             <a href="http://" target="_blank" rel="noopener noreferrer" class="profile-name">Ethan
                                 Garcia</a>
-                            <span class="profile-handle">@johan_drick</span>
+                            <span class="profile-handle">@ethan_gar</span>
                         </div>
                     </div>
                 </div>
@@ -345,7 +339,7 @@
                         <div class="name-handle-container">
                             <a href="http://" target="_blank" rel="noopener noreferrer" class="profile-name">Ava
                                 Rodriguez</a>
-                            <span class="profile-handle">@johan_drick</span>
+                            <span class="profile-handle">@rodriguez</span>
                         </div>
                     </div>
                 </div>
@@ -359,7 +353,7 @@
                         <div class="name-handle-container">
                             <a href="http://" target="_blank" rel="noopener noreferrer" class="profile-name">Grace
                                 Anderson</a>
-                            <span class="profile-handle">@johan_drick</span>
+                            <span class="profile-handle">@grace_anderson</span>
                         </div>
                     </div>
                 </div>
@@ -375,7 +369,7 @@
                         <div class="name-handle-container">
                             <a href="http://" target="_blank" rel="noopener noreferrer" class="profile-name">Daniel
                                 Martinez</a>
-                            <span class="profile-handle">@johan_drick</span>
+                            <span class="profile-handle">@daniel_martinez</span>
                         </div>
                     </div>
                 </div>
